* Improve progress bar styling (added spacing, increced percentage font, added animation to progressbar fill). Issued by @rick_ . See #2381483 * Fixed vertical-tabs textfield input moving when selected in google chrome. Issue coz of box-sizing was changed in vertical-tabs.css

--- a/css/style.css
+++ b/css/style.css
@@ -2201,14 +2201,33 @@ div.ui-dialog.ui-widget.ui-widget-content.ui-corner-all.media-wrapper {
   color: #111;
 }
 
-.progress .bar {
+body.adminimal-theme .progress .bar {
   background: none repeat scroll 0 0 #CCCCCC;
   border: none;
   border-radius: 0;
-  margin: 0 0.2em;
+  margin: 0 0 0.5em 0;
 }
 
-.progress .filled, .progress .bar .filled {
+body.adminimal-theme .progress .percentage {
+  float: right;
+  font-size: 26px;
+  font-weight: 100;
+  line-height: 30px;
+}
+
+body.adminimal-theme .progress .filled {
+  -webkit-transition: 0.5s linear;
+  -moz-transition: 0.5s linear;
+  -o-transition: 0.5s linear;
+  transition: 0.5s linear;
+  -webkit-transition-property: width, background-color;
+  -moz-transition-property: width, background-color;
+  -o-transition-property: width, background-color;
+  transition-property: width, background-color;
+}
+
+body.adminimal-theme .progress .filled,
+body.adminimal-theme .progress .bar .filled {
   background: none repeat scroll 0 0 #0074BD !important;
 }
 
